cmake_minimum_required(VERSION 3.2)

project(
    chapter3
    VERSION 1.0
)

add_executable(
    limits
    "./limits.cpp"
)

add_executable(
    exceed
    "./exceed.cpp"
)

add_executable(
    hexoct
    "./hexoct.cpp"
)

add_executable(
    hexoct2
    "./hexoct2.cpp"
)

add_executable(
    chartype
    "./chartype.cpp"
)

add_executable(
    morechar
    "./morechar.cpp"
)


add_executable(
    bondini
    "./bondini.cpp"
)

add_executable(
    floatnum
    "./floatnum.cpp"
)